# CANOpenRobotController

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTION.md  Doxyfile  LICENSE  Makefile  README.md  aarch64.cmake  armhf.cmake  corc.cmake  makefile  package.ROS2.xml  package.ros2.xml  package.xml  riscv64.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Docs/: Flowchart.md  StateMachine.md
Docs/Diagrams/: CORC_flow_chart.drawio
Logging/: CpuLog.md  cpuLog.csv  log.csv  loging.py
config/: M3_params.yaml  dynamic_params.cfg  m1_dynamic_params.cfg  m2p_params.yaml  multi_m1.perspective  rqt.sh  rqt_multiplot_X1.xml  rqt_multiplot_X_left.xml  rqt_multiplot_Y.xml  rqt_multiplot_Y_right.xml  rqt_multiplot_dyadic.xml  rqt_multiplot_dyadic_YX.xml  rqt_multiplot_transperancy.xml  rqt_multiplot_virtual_spring.xml  x2.perspective  x2_dynamic_params.cfg  x2_params.yaml  x2_ros_control.yaml
doc/: .travis.yml  BBAISetup.md  CustomApplication.md  Docker.md  Flowchart.md  InstallLinux.md  InstallWindows.md  M1ROS(ToBeDeleted).md  MultiRobot.md  NetworkCommunication.md  ObjectDictionary.md  ROSApplication.md  RosApplication.md  Simulation.md  StateMachine.md  am5729-beagleboneai-custom-can.dtb
doc/1. Getting Started/: GSBasicSimulation.md  GettingStarted.md  InstallLinux.md
doc/1.GettingStarted/: AdvancedSimulationAndHardwareTesting.md  GSBasicSimulation.md  GSFITHVDemoMachine.md  GSM1DemoMachine.md  GSM2DemoMachine.md  GSM3DemoMachine.md  GettingStarted.md  InstallLinux.md  InstallROS.md  InstallWindows.md  ROS2Application.md  Simulation.md
doc/2. Hardware/: USBCANadapters.md
doc/2.Hardware/: BBAISetup.md  BBUse.md  CANIMU.md  InputsList.md  ModifyingDevice.md
doc/3. Software/: CustomApplication.md  NetworkCommunication.md
doc/3.Software/: CustomApplication.md  Flowchart.md  Logging.md  NetworkCommunication.md  ROSApplication.md
doc/Diagrams/: CORCStateMachineExecution.drawio  CORC_flow_chart.drawio
doc/img/: CORCTree.txt
initRobot/: initiVCAN.sh
launch/: m1_real.launch  multi_m1_real.launch  x2_real.launch  x2_real.launch.py  x2_ros2.launch.py  x2_sim.launch
lib/FLNL/: FLNL.h  baseSocket.cpp  client.cpp  server.cpp
lib/spdlog/helper/: LogHelper.cpp  LogHelper.h
msg/: X2Acceleration.msg  X2AccelerationMerge.msg  X2Array.msg
script/: X2_startCAN.sh  createStateMachine.sh  findRFT.sh  initCAN0.sh  initCAN0CAN1.sh  initCAN1.sh  initCANBBAI.sh  initPCAN.sh  initVCAN.sh  uploadBB.sh
src/: main.cpp
src/apps/: CopleyDrive.cpp  CopleyDrive.h  DebugMacro.h  DummyActJoint.cpp  DummyActJoint.h  DummyTrajectoryGenerator.h  ExoRobot.cpp  ExoRobot.h  Keyboard.h  README.md  RobotParams.h  application.cpp  application.h  main.cpp
src/apps/ExoTestMachine/: README.md  app.cmake
src/apps/FITHVExoDemoMachine/: FITHVExoDemoMachine.cpp  FITHVExoDemoMachine.h  FITHVExoDemoStates.cpp  FITHVExoDemoStates.h  app.cmake
src/apps/ForcePlateApp/: ForcePlateApp.cpp  ForcePlateApp.h
src/apps/LoggingDevice/: app.cmake
src/apps/M1DemoMachine/: M1DemoMachine.cpp  M1DemoMachine.h  M1DemoMachineROS.cpp  M1DemoMachineROS.h  M1DemoStates.cpp  M1DemoStates.h  app.cmake
src/apps/M1DemoMachineROS/: M1DemoMachineROS.cpp  M1DemoMachineROS.h  M1MachineROS.cpp  M1MachineROS.h  app.cmake
src/apps/M1TestMachine/: M1TestMachine.cpp  M1TestMachine.h
src/apps/M2DemoMachine/: M2DemoMachine.cpp  M2DemoMachine.h  M2DemoStates.cpp  M2DemoStates.h  app.cmake
src/apps/M2ProDemoMachine/: M2ProDemoMachine.cpp  M2ProDemoMachine.h  M2ProDemoStates.cpp  M2ProDemoStates.h  README.md  app.cmake
src/apps/M2Spasticity/: M2Spasticity.cpp  M2Spasticity.h  M2SpasticityStates.cpp  M2SpasticityStates.h
src/apps/M3Chai/: M3Chai.cpp  M3Chai.h  M3ChaiStates.cpp  M3ChaiStates.h
src/apps/M3Demo/: M3DemoMachine.cpp  M3DemoMachine.h  M3DemoStates.cpp  M3DemoStates.h
src/apps/M3DemoMachine/: M3DemoMachine.cpp  M3DemoMachine.h  M3DemoStates.cpp  M3DemoStates.h  app.cmake
src/apps/MultiM1Machine/: MultiM1Machine.cpp  MultiM1Machine.h  MultiM1MachineROS.cpp  MultiM1MachineROS.h
src/apps/Robot/: CopleyDrive.cpp  CopleyDrive.h  RobotParams.h
src/apps/StateMachineTemplate/: StateMachineTemplate.cpp  StateMachineTemplate.h  StatesTemplate.cpp  StatesTemplate.h  app.cmake
src/apps/X2DemoMachine/: IdleState.h  X2DemoMachine.cpp  X2DemoMachine.h  X2DemoMachineROS.cpp  X2DemoMachineROS.h  X2DemoState.cpp  X2DemoState.h  app.cmake
src/apps/X2DemoMachineROS2/: X2DemoMachineNode.cpp  X2DemoMachineNode.h  X2DemoMachineROS2.cpp  X2DemoMachineROS2.h
src/apps/X2ROS2DemoMachine/: X2ROS2DemoMachine.cpp  X2ROS2DemoMachine.h  X2ROS2Node.cpp  X2ROS2Node.h  X2ROS2State.cpp  X2ROS2State.h  app.cmake
src/apps/example/: application.cpp  application.h  main.cpp
src/apps/stateMachine/: ExoTestMachine.cpp  ExoTestMachine.h
src/core/: DebugMacro.h  LogHelper.h  LoopTiming.cpp  LoopTiming.h  application.cpp  application.h  logging.cpp  logging.h  main.cpp
src/core/TrajectoryGenerator/: TrajectoryGenerator.cpp
src/core/network/: FLNLHelper.h
src/core/robot/: ActuatedJoint.cpp  ActuatedJoint.h  CANDevice.h  Drive.cpp  Drive.h  InputDevice.cpp  InputDevice.h  Joint.cpp  Joint.h  Node.cpp  Node.h  Robot.cpp  Robot.h
src/core/stateMachine/: Event.cpp  State.cpp  State.h  StateMachine.cpp  StateMachine.h  Transition.cpp  Transition.h
src/hardware/IO/: CANIMU.cpp  CANIMU.h  FITAbsEncoder.cpp  FITAbsEncoder.h  ForcePlateSensor.cpp  ForcePlateSensor.h  FourierForceSensor.cpp  FourierForceSensor.h  FourierHandle.cpp  FourierHandle.h  HX711.cpp  HX711.h  I2CBNO55IMU.cpp  I2CBNO55IMU.h  I2CDevice.cpp  I2CDevice.h  InputDevice.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  RobotousRFT.cpp  RobotousRFT.h  TechnaidIMU.cpp  TechnaidIMU.h  iobb.c  iobb.h
src/hardware/drives/: CopleyDrive.cpp  CopleyDrive.h  EPOSDrive.cpp  EPOSDrive.h  KincoDrive.cpp  KincoDrive.h
src/include/robot/: Drive.cpp  Drive.h
src/libs/CANcomms/: CO_command.c  (+1 more)
src/tests/: testDrives.cpp  testJoints.cpp  testOD.cpp  testRobot.cpp  testSM.cpp  testTraj.cpp
tests/: testJoints.cpp  testOD.cpp  testRobot.cpp  testSM.cpp
(+184 files in other folders)
